@@ -1,12 +1,12 @@
 # --
 # Kernel/System/PostMaster/Filter/Match.pm - sub part of PostMaster.pm
-# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Match.pm,v 1.20 2010/10/04 11:03:01 bes Exp $
+# $Id: Match.pm,v 1.9.2.1 2008/10/13 21:23:04 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
-# the enclosed file COPYING for license information (AGPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
+# the enclosed file COPYING for license information (GPL). If you
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 package Kernel::System::PostMaster::Filter::Match;
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.20 $) [1];
+$VERSION = qw($Revision: 1.9.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -26,8 +26,8 @@ sub new {
 
     $Self->{Debug} = $Param{Debug} || 0;
 
-    # get needed objects
-    for (qw(ConfigObject LogObject DBObject ParserObject)) {
+    # get needed opbjects
+    for (qw(ConfigObject LogObject DBObject)) {
         $Self->{$_} = $Param{$_} || die "Got no $_!";
     }
 
@@ -37,20 +37,11 @@ sub new {
 sub Run {
     my ( $Self, %Param ) = @_;
 
-    # check needed stuff
-    for (qw(JobConfig GetParam)) {
-        if ( !$Param{$_} ) {
-            $Self->{LogObject}->Log( Priority => 'error', Message => "Need $_!" );
-            return;
-        }
-    }
-
     # get config options
-    my %Config;
-    my %Match;
-    my %Set;
-    my $StopAfterMatch;
-    if ( $Param{JobConfig} && ref $Param{JobConfig} eq 'HASH' ) {
+    my %Config = ();
+    my %Match  = ();
+    my %Set    = ();
+    if ( $Param{JobConfig} && ref( $Param{JobConfig} ) eq 'HASH' ) {
         %Config = %{ $Param{JobConfig} };
         if ( $Config{Match} ) {
             %Match = %{ $Config{Match} };
@@ -58,49 +49,13 @@ sub Run {
         if ( $Config{Set} ) {
             %Set = %{ $Config{Set} };
         }
-        $StopAfterMatch = $Config{StopAfterMatch} || 0;
-    }
-
-    my $Prefix = '';
-    if ( $Config{Name} ) {
-        $Prefix = "Filter: '$Config{Name}' ";
     }
 
     # match 'Match => ???' stuff
     my $Matched    = '';
     my $MatchedNot = 0;
     for ( sort keys %Match ) {
-
-        # match only email addresses
-        if ( $Param{GetParam}->{$_} && $Match{$_} =~ /^EMAILADDRESS:(.*)$/ ) {
-            my $SearchEmail    = $1;
-            my @EmailAddresses = $Self->{ParserObject}->SplitAddressLine(
-                Line => $Param{GetParam}->{$_},
-            );
-            my $LocalMatched;
-            for my $Recipients (@EmailAddresses) {
-                my $Email = $Self->{ParserObject}->GetEmailAddress( Email => $Recipients );
-                if ( $Email =~ /^$SearchEmail$/i ) {
-                    $LocalMatched = $SearchEmail || 1;
-                    if ( $Self->{Debug} > 1 ) {
-                        $Self->{LogObject}->Log(
-                            Priority => 'debug',
-                            Message  => "$Prefix'$Param{GetParam}->{$_}' =~ /$Match{$_}/i matched!",
-                        );
-                    }
-                    last;
-                }
-            }
-            if ( !$LocalMatched ) {
-                $MatchedNot = 1;
-            }
-            else {
-                $Matched = $LocalMatched;
-            }
-        }
-
-        # match string
-        elsif ( $Param{GetParam}->{$_} && $Param{GetParam}->{$_} =~ /$Match{$_}/i ) {
+        if ( $Param{GetParam}->{$_} && $Param{GetParam}->{$_} =~ /$Match{$_}/i ) {
 
             # don't lose older match values if more than one header is
             # used for matching.
@@ -113,7 +68,7 @@ sub Run {
             if ( $Self->{Debug} > 1 ) {
                 $Self->{LogObject}->Log(
                     Priority => 'debug',
-                    Message  => "$Prefix'$Param{GetParam}->{$_}' =~ /$Match{$_}/i matched!",
+                    Message  => "'$Param{GetParam}->{$_}' =~ /$Match{$_}/i matched!",
                 );
             }
         }
@@ -122,7 +77,7 @@ sub Run {
             if ( $Self->{Debug} > 1 ) {
                 $Self->{LogObject}->Log(
                     Priority => 'debug',
-                    Message  => "$Prefix'$Param{GetParam}->{$_}' =~ /$Match{$_}/i matched NOT!",
+                    Message  => "'$Param{GetParam}->{$_}' =~ /$Match{$_}/i matched NOT!",
                 );
             }
         }
@@ -135,19 +90,9 @@ sub Run {
             $Param{GetParam}->{$_} = $Set{$_};
             $Self->{LogObject}->Log(
                 Priority => 'notice',
-                Message  => $Prefix
-                    . "Set param '$_' to '$Set{$_}' (Message-ID: $Param{GetParam}->{'Message-ID'}) ",
+                Message =>
+                    "Set param '$_' to '$Set{$_}' (Message-ID: $Param{GetParam}->{'Message-ID'}) ",
             );
-        }
-
-        # stop after match
-        if ($StopAfterMatch) {
-            $Self->{LogObject}->Log(
-                Priority => 'notice',
-                Message  => $Prefix
-                    . "Stopped filter processing because of used 'StopAfterMatch' (Message-ID: $Param{GetParam}->{'Message-ID'}) ",
-            );
-            return 1;
         }
     }
     return 1;
