@@ -1,12 +1,12 @@
 # --
 # Kernel/System/PostMaster/Filter/MatchDBSource.pm - sub part of PostMaster.pm
-# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: MatchDBSource.pm,v 1.21 2010/12/10 15:35:52 martin Exp $
+# $Id: MatchDBSource.pm,v 1.13.2.1 2008/10/13 21:23:04 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
-# the enclosed file COPYING for license information (AGPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
+# the enclosed file COPYING for license information (GPL). If you
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 package Kernel::System::PostMaster::Filter::MatchDBSource;
@@ -17,7 +17,7 @@ use warnings;
 use Kernel::System::PostMaster::Filter;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.21 $) [1];
+$VERSION = qw($Revision: 1.13.2.1 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -28,7 +28,7 @@ sub new {
 
     $Self->{Debug} = $Param{Debug} || 0;
 
-    # get needed objects
+    # get needed opbjects
     for (qw(ConfigObject LogObject DBObject ParserObject)) {
         $Self->{$_} = $Param{$_} || die "Got no $_!";
     }
@@ -41,29 +41,20 @@ sub new {
 sub Run {
     my ( $Self, %Param ) = @_;
 
-    # check needed stuff
-    for (qw(JobConfig GetParam)) {
-        if ( !$Param{$_} ) {
-            $Self->{LogObject}->Log( Priority => 'error', Message => "Need $_!" );
-            return;
-        }
-    }
+    # get config options
+    my %Config = ();
+    my %Match  = ();
+    my %Set    = ();
 
-    # get all db filters
     my %JobList = $Self->{PostMasterFilter}->FilterList();
     for ( sort keys %JobList ) {
-
-        # get config options
-        my %Config = $Self->{PostMasterFilter}->FilterGet( Name => $_ );
-        my %Match;
-        my %Set;
+        %Config = $Self->{PostMasterFilter}->FilterGet( Name => $_ );
         if ( $Config{Match} ) {
             %Match = %{ $Config{Match} };
         }
         if ( $Config{Set} ) {
             %Set = %{ $Config{Set} };
         }
-        my $StopAfterMatch = $Config{StopAfterMatch} || 0;
         my $Prefix = '';
         if ( $Config{Name} ) {
             $Prefix = "Filter: '$Config{Name}' ";
@@ -73,17 +64,14 @@ sub Run {
         my $Matched    = '';
         my $MatchedNot = 0;
         for ( keys %Match ) {
-
-            # match only email addresses
             if ( $Param{GetParam}->{$_} && $Match{$_} =~ /^EMAILADDRESS:(.*)$/ ) {
                 my $SearchEmail    = $1;
                 my @EmailAddresses = $Self->{ParserObject}->SplitAddressLine(
                     Line => $Param{GetParam}->{$_},
                 );
                 my $LocalMatched;
-                for my $Recipients (@EmailAddresses) {
-                    my $Email = $Self->{ParserObject}->GetEmailAddress( Email => $Recipients );
-                    next if !$Email;
+                for my $RawEmail (@EmailAddresses) {
+                    my $Email = $Self->{ParserObject}->GetEmailAddress( Email => $RawEmail );
                     if ( $Email =~ /^$SearchEmail$/i ) {
                         $LocalMatched = $SearchEmail || 1;
                         if ( $Self->{Debug} > 1 ) {
@@ -103,8 +91,6 @@ sub Run {
                     $Matched = $LocalMatched;
                 }
             }
-
-            # match string
             elsif ( $Param{GetParam}->{$_} && $Param{GetParam}->{$_} =~ /$Match{$_}/i ) {
 
                 # don't lose older match values if more than one header is
@@ -143,16 +129,6 @@ sub Run {
                     Message  => $Prefix
                         . "Set param '$_' to '$Set{$_}' (Message-ID: $Param{GetParam}->{'Message-ID'}) ",
                 );
-            }
-
-            # stop after match
-            if ($StopAfterMatch) {
-                $Self->{LogObject}->Log(
-                    Priority => 'notice',
-                    Message  => $Prefix
-                        . "Stopped filter processing because of used 'StopAfterMatch' (Message-ID: $Param{GetParam}->{'Message-ID'}) ",
-                );
-                return 1;
             }
         }
     }
